Fix broken css for edit comment button.

--- a/app/src/app/chat-room/edit-chat-message/edit-chat-message.component.css
+++ b/app/src/app/chat-room/edit-chat-message/edit-chat-message.component.css
@@ -37,16 +37,16 @@
   color: #ffffff;
 }
 
-.option-btn {
+.edit-btn {
   margin-right: 20px;
   background-color: #08799c;
   color: #ffffff;
 }
 
-.option-btn:hover {
+.edit-btn:hover {
   background-color: #5fabbf;
 }
 
-.option-btn:disabled {
+.edit-btn:disabled {
   background-color: #8c9395;
 }
